torus-search in torus-index of all files of the torus torus/ -> torus-

--- a/README.org
+++ b/README.org
@@ -49,6 +49,8 @@ emacs.
 
     + Possibility do have the same file as member of distinct groups
 
+  - Search among all files in the torus
+
   - Persistence
 
     + Save torus to a file
