--- a/README.org
+++ b/README.org
@@ -99,8 +99,10 @@ Here is a sample configuration :
   ;; Created if non existent
   (setq torus-dirname "~/.emacs.d/torus/")
 
-  (setq torus-max-vertical-split 3)
-  (setq torus-max-horizontal-split 3)
+  (setq torus-history-maximum-elements 30)
+
+  (setq torus-maximum-horizontal-split 3)
+  (setq torus-maximum-vertical-split 3)
 
   (torus-init)
 
@@ -130,6 +132,8 @@ Suggested additional bindings :
   (global-set-key (kbd "s-SPC") 'torus-switch-circle)
   (global-set-key (kbd "s-=") 'torus-switch-location)
   (global-set-key (kbd "s-/") 'torus-search)
+
+  (global-set-key (kbd "C-^") 'torus-alternate)
 
 #+end_src
 
