--- a/README.org
+++ b/README.org
@@ -56,7 +56,7 @@ emacs.
 
   - Search among all files in the torus
 
-  - Open buffers of the group in horizontal or vertical split
+  - Open all buffers of the group in horizontal or vertical split
 
     + Be aware that the current buffer in the torus will be the last opened
 
