--- a/README.org
+++ b/README.org
@@ -80,9 +80,11 @@ emacs.
 
   - Persistence
 
-    + Save torus to a file
+    + Save torus to a file (with buffer and input history)
 
     + Load torus from a file
+
+    + On demand loading of files : great for big projects
 
     + Switch torus easily
 
@@ -90,12 +92,14 @@ emacs.
 
       * A list of loaded toruses is also available
 
-  - On demand loading of files : great for big projects
+    + Load a file and append to the existing torus
 
-  - Load a file and append to the existing torus
+      * Possibility to add prefixes to the group names, to avoid
+	 confusion
 
-    + Possibility to add prefixes to the group names, to avoid
-      confusion
+  - And more
+
+    + Rename, move, copy, delete things
 
 
 * Configuration
@@ -159,6 +163,8 @@ instance :
 
   (global-set-key (kbd "s-SPC") 'torus-switch-circle)
   (global-set-key (kbd "s-=") 'torus-switch-location)
+  (global-set-key (kbd "s-^") 'torus-switch-torus)
+
   (global-set-key (kbd "s-/") 'torus-search)
 
   (global-set-key (kbd "C-^") 'torus-alternate)
@@ -168,4 +174,4 @@ instance :
 
 * Warning
 
-I try to be mindful when I code, but some bugs might remain, so be careful.
+Despite abundant testing, some bugs might remain, so be careful.
