--- a/README.org
+++ b/README.org
@@ -114,6 +114,7 @@ Here is a sample configuration :
   ;; Created if non existent
   (setq torus-dirname "~/.emacs.d/torus/")
 
+  ;; Set it to t if you want all functions available in bindings
   (setq torus-optional-bindings nil)
 
   (setq torus-save-on-exit t)
